# nlp_proj

./: .gitignore  CLAUDE.md  README.md  environment.vllm.yml  environment.yml  pyproject.toml  requirements.txt
COLM_2026_Template/: colm2026_conference.tex  references.bib
configs/: exp_a_retrieval.yaml  exp_b_reasoning.yaml  exp_c_inference_extension.yaml  exp_d_serving.yaml
docs/: experiments.md  report_outline.md  survey1.md  survey2.md  survey3.md
report/: main.tex  references.bib
results/exp_c/: c1_prefill_summary.csv  c2_decode_prompt_len_sweep_summary.csv  c2_decode_summary.csv  c3_backend_llama_hf_capacity_summary.csv  c3_backend_llama_summary.csv  readme.md
scripts/: run_exp_a.py  run_exp_b.py  run_exp_c.py  run_exp_d.py
src/: utils.py
src/data/: README.md  ruler_a.sh  ruler_b.sh
src/exp_a/: README.md  __init__.py  analyze_ruler_predictions.py  data_loader.py  eval_ruler_hf.py  evaluator.py  gen_pred_ruler.py  model_adapter.py  plot_position_sensitivity.py  runner.py  schema.py  test_mamba.py
src/exp_b/: README.md  __init__.py  analyze_benchmarks.py  analyze_longbench.py  analyze_ruler_reasoning.py  data_loader.py  evaluator.py  gen_pred_benchmarks.py  gen_pred_longbench.py  gen_pred_ruler_reasoning.py  model_adapter.py  plot_benchmark_results.py  plot_longbench.py  plot_ruler_reasoning.py  runner.py  schema.py
src/exp_c/: README.md  __init__.py  analyze_exp_c.py  bench_backend_llama.py  bench_decode_hf.py  bench_hf.py  bench_prefill_hf.py  bench_vllm.py  common.py  data_loader.py  evaluator.py  method_adapter.py  runner.py  schema.py
src/exp_d/: README.md  __init__.py  client_adapter.py  profiler.py  runner.py  schema.py  workload.py
src/models/: README.md  __init__.py  base.py  factory.py  spec.py
(+27 files in other folders)
