[project]
name = "nlp-proj"
version = "0.1.0"
description = "NLP course project for long-context LLM experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate==1.13.0",
  "datasets==4.8.5",
  "huggingface-hub==0.36.2",
  "nltk==3.9.4",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "PyYAML==6.0.3",
  "safetensors==0.7.0",
  "sentencepiece==0.2.1",
  "tokenizers==0.21.4",
  "torch==2.5.1+cu121",
  "torchaudio==2.5.1+cu121",
  "torchvision==0.20.1+cu121",
  "tqdm==4.67.3",
  "transformers==4.49.0",
  "triton==3.1.0",
  "wonderwords==3.0.1",
]

[project.optional-dependencies]
# 已验证可直接由 uv 同步的 Mamba 相关依赖。
# mamba-ssm 不直接写在这里，因为当前推荐通过本地 wheel 安装，
# 避免在服务器网络不佳时触发大文件下载或源码构建。
mamba-kernels = [
  "causal-conv1d==1.6.2.post1",
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
torchvision = { index = "pytorch-cu121" }
