[project]
name = "nlp-proj"
version = "0.1.0"
description = "NLP course project for long-context LLM experiments."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "accelerate==1.13.0",
  "datasets==4.8.5",
  "huggingface-hub==0.36.2",
  "matplotlib==3.10.9",
  "nltk==3.9.4",
  "numpy==2.4.6",
  "pandas==3.0.3",
  "safetensors==0.7.0",
  "sentencepiece==0.2.1",
  "tokenizers==0.21.4",
  "tqdm==4.67.3",
  "transformers==4.49.0",
  "wonderwords==3.0.1",
]

# 仅保留纯 Python / 轻量依赖。
# PyTorch / CUDA / Triton / vLLM / mamba 相关二进制依赖统一交给
# micromamba / conda 管理，避免 uv 误改底层运行时。

[tool.uv]
package = false
